--- a/html/site.html
+++ b/html/site.html
@@ -2,12 +2,13 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
+  <link rel="icon" href="../img/logo.png" sizes="32x32" /> <!--サイトアイコン-->
+  <link rel="icon" href="../Img/logo.png" sizes="192x192" /> <!--サイトアイコン-->
+  <link rel="apple-touch-icon-precomposed" href="image/logo.png" /> <!--Apple用サイトアイコン-->
   <meta charset="utf-8"> <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -34,36 +35,52 @@
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
     </form>
   </div>
-  <div id="wrapper">
-    <p class="btn-gnavi">
-      <span></span>
-      <span></span>
-      <span></span>
-    </p>
-    <div id="bar">
-      <ul>
-        <li><a href="purpose.html">寮の目的 &gt;</a></li>
-        <li><a href="facility.html">施設,設備 &gt;</a></li>
-        <li><a href="event.html">寮生活 &gt;</a></li>
-        <li><a href="cost.html">学寮経費 &gt;</a></li>
-        <li><a href="parents.html">保護者の方へ &gt;</a></li>
-        <li><a href="examinee.html">受験生へ &gt;</a></li>
-        <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
-        <li><a href="contact.html">お問い合わせ &gt;</a></li>
-      </ul>
+
+  <div class="bar">
+    <li><a href="purpose.html">寮の目的 &gt;</a></li>
+    <li><a href="facility.html">施設,設備 &gt;</a></li>
+    <li><a href="event.html">寮生活 &gt;</a></li>
+    <li><a href="cost.html">学寮経費 &gt;</a></li>
+    <li><a href="parents.html">保護者の方へ &gt;</a></li>
+    <li><a href="examinee.html">受験生へ &gt;</a></li>
+    <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
+    <li><a href="contact.html">お問い合わせ &gt;</a></li>
+  </div>
+
+  <div class="contents">
+    <h2>
+      <div class="border border-primary" style="padding:10px;">本サイトについて</div>
+    </h2>
+    <h3>目的</h3>
+    <div class="border-top" style="padding:10px;"> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
+      高城寮の活動を学内外に公開するとともに、寮生の生活を支援する情報を提供することを目的としています。
+    </div> <!--上ボーダー -->
+    <br>
+    <h3>著作権</h3>
+    <div class="border-top" style="padding:10px;">高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
+      著作権法が定める範囲を除き、高城寮の許可なく複写・複製，転用，販売などの二次利用をすることを禁止します。
     </div>
-  </div>  
-  <div class="main">
+    <br>
+    <h3>免責事項</h3>
+    <div class="border-top" style="padding:10px;">高城寮ウェブサイトの情報は、事前告知なく変更・削除されます。
+      また、正確性には十分配慮しておりますが、高城寮ウェブサイトの情報により生じた不利益について高城寮は責任を負いません。
+    </div>
+    <br>
+    <h3>リンク</h3>
+    <div class="border-top" style="padding:10px;">高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
+      urlの変更・削除について告知いたしません。また、高城寮の活動の趣旨に反するサイト（公序良俗に反する、合法性に懸念があるなど）からの
+      リンクを禁止します。
+    </div> <!--上ボーダー -->
+
+
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <img src="../img/footer.png" height="75px">
+    <a href="site.html"><p id="site">このサイトについて</p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
   </body>
 </html>
