--- a/html/purpose.html
+++ b/html/purpose.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
@@ -35,17 +35,26 @@
     </form>
   </div>
 
-  <div class="bar">
-    <li><a href="purpose.html">寮の目的 &gt;</a></li>
-    <li><a href="facility.html">施設,設備 &gt;</a></li>
-    <li><a href="event.html">寮生活 &gt;</a></li>
-    <li><a href="cost.html">学寮経費 &gt;</a></li>
-    <li><a href="parents.html">保護者の方へ &gt;</a></li>
-    <li><a href="examinee.html">受験生へ &gt;</a></li>
-    <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
-    <li><a href="contact.html">お問い合わせ &gt;</a></li>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <div class="bar">
+      <ul>
+        <li><a href="purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="facility.html">施設,設備 &gt;</a></li>
+        <li><a href="event.html">寮生活 &gt;</a></li>
+        <li><a href="cost.html">学寮経費 &gt;</a></li>
+        <li><a href="parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="examinee.html">受験生へ &gt;</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="contact.html">お問い合わせ &gt;</a></li>
+      </ul>
+    </div>
   </div>
-
+  
   <div class="contents">
     <div class="container">
       <div class="row">
@@ -97,11 +106,14 @@
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="75px">
-    <a href="site.html"><p id="site">このサイトについて</p></a>
+    <img src="../img/footer.png" height="70px">
+    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
+  <script src="../script/common.js"></script> <!--JS取り込み-->
+  <script src="../script/search.js"></script> <!--JS取り込み-->
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
   </body>
 </html>
