--- a/en/cost.html
+++ b/en/cost.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
+  <link rel="icon" href="../img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
   <meta charset="utf-8"> <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +27,9 @@
 
   <div class="header">
     <a href="index.html"><img id="logo" src="../img/header.png" height="70px"></a>
-    <a href="../html/cost.html"><h3 id="lang">日本語</h3></a>
-    <a href="location.html"><h3 id="access">Location</h3></a>
-    <form action="result.html" id="search">
+    <a href="../html/cost.html"><h3 class="lang">日本語</h3></a>
+    <a href="location.html"><h3 class="access">Location</h3></a>
+    <form action="result.html" class="search">
       <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
       <input id="search-buttom" class="fas" type="submit" value="search" method="get">
     </form>
@@ -39,7 +40,15 @@
       <span></span>
       <span></span>
     </p>
-    <div id="bar">
+    <nav id="bar">
+      <form action="result.html" class="search">
+        <li>
+          <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
+          <input id="search-buttom" class="fas" type="submit" value="search" method="get">
+        </li>
+        </form>
+        <li><a href="../html/contact.html"><h3 class="lang">日本語</h3></a></li>
+        <li><a href="location.html"><h3 class="access">Location</h3></a></li>
       <ul>
         <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
         <li><a href="facility.html">Facility &gt;</a></li>
@@ -50,7 +59,7 @@
         <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
         <li><a href="contact.html">Contact us &gt;</a></li>
       </ul>
-    </div>
+    </nav>
   </div>
 
   <div class="footer">
@@ -59,8 +68,8 @@
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script> <!--JS取り込み-->
   <script src="../script/search.js"></script> <!--JS取り込み-->
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
