--- a/html/location.html
+++ b/html/location.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/locationMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--アクセスサイト用CSS-->
   <link rel="stylesheet" href="../style/location.css" type="text/css" media="screen and (min-width:1450px)"> <!--アクセスサイト用CSS-->
@@ -25,12 +26,12 @@
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
-
+  <div id="page_top"><a href="#"></a></div>
   <div class="header">
     <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
-    <a href="../en/location.html"><h3 id="lang">ENGLISH</h3></a>
-    <a href="location.html"><h3 id="access">アクセス</h3></a>
-    <form action="result.html" id="search">
+    <a href="../en/location.html"><h3 class="lang">ENGLISH</h3></a>
+    <a href="location.html"><h3 class="access">アクセス</h3></a>
+    <form action="result.html" class="search">
       <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
     </form>
@@ -41,8 +42,16 @@
       <span></span>
       <span></span>
     </p>
-    <div id="bar">
+    <nav id="bar">
       <ul>
+        <form action="result.html" class="search">
+        <li>
+            <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
+            <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
+        </li>
+        </form>
+        <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
+        <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
         <li><a href="purpose.html">寮の目的 &gt;</a></li>
         <li><a href="facility.html">施設,設備 &gt;</a></li>
         <li><a href="event.html">寮生活 &gt;</a></li>
@@ -52,7 +61,7 @@
         <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
         <li><a href="contact.html">お問い合わせ &gt;</a></li>
       </ul>
-    </div>
+    </nav>
   </div>
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.6527980452624!2d131.84742641564495!3d34.05277638060586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3544e0c9c1b77aa9%3A0xcef289fe15db68a5!2z5b6z5bGx5bel5qWt6auY562J5bCC6ZaA5a2m5qChIOmrmOWfjuWvrg!5e0!3m2!1sja!2sjp!4v1601156582820!5m2!1sja!2sjp" height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="map"></iframe>
@@ -63,8 +72,8 @@
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="../script/common.js"></script> <!--JS取り込み-->
   <script src="../script/search.js"></script> <!--JS取り込み-->
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
